bug, incomplete, refactor: Compile fixes and rewriting to use codecs and stream codecs here and there; a few runtime fixes